# D3D12_practice

./: .gitignore
Initialize/D3D12_practice_initialize/: D3D12_practice_initialize.sln  D3D12_practice_initialize.vcxproj  D3D12_practice_initialize.vcxproj.filters  README.md  main.cpp
Initialize/D3D12_practice_initialize/rs/: Cargo.toml
Initialize/D3D12_practice_initialize/rs/shaders/: BasicShaderHeader.hlsli  PixelShader.hlsl  ShaderHeader.hlsli  VertexShader.hlsl
Initialize/D3D12_practice_initialize/rs/src/: lib.rs  main.rs  win.rs
