[package]
name = "rs"
version = "0.1.0"
authors = ["Hajime-san <utd.c.r.d.s.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
d3d12-sys = "0.2.0"
dxgi-sys = "0.2.0"
dxguid-sys = "0.2.0"
d3dcompiler-sys = "0.2.0"
widestring = "0.2.0"
